2020-09-11  Charlie Zender  <zender@uci.edu>

	* Add _FillValue to filter test datasets

2020-09-10  Charlie Zender  <zender@uci.edu>

	* ncclimo make dec_md option scd==djf and sdd=jfd synonyms

	* Add dr.cdl to test DigitRounding quantization

2020-09-09  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.5-alpha03: Drishti';git push
 	git tag -a 4.9.5-alpha03 -m 'icc, icpc;';git push --tags

	* Intel compiler compatibility fully restored

	* nco_ply_lst.c fix kdtree/weight generation OpenMP to work with Intel icc

2020-09-08  Charlie Zender  <zender@uci.edu>

	* nco_cmp_get() result in Intel compiler on MacOSX even if __clang__ defined

	* NCO 4.9.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.5-alpha02: Aquashavasana';git push
 	git tag -a 4.9.5-alpha02 -m 'nco_flt.[ch], compression filter stubs, dpr esmf';git push --tags

	* Deprecate configure.ac ESMF options and improve examples

2020-09-07  Charlie Zender  <zender@uci.edu>

	* Protect pragma omp simd with compiler-version ifdef's for GCC	and Clang

 	* Add nco_def_var_filterx() wrapper for netCDF 4.8.0+

 	* Add nco_inq_var_filterids(), nco_inq_var_filter_info(), nco_inq_var_filter_remove() wrappers for netCDF 4.7.4+

	* Add nco_flt.c, nco_flt.h for compression filter utilities

	* ncclimo/ncremap add future-compatible clauses for andes+chrysalis

	* ncks add --flt and --filter options to provide filter string

	* Add solution to HDF5 errors caused by no HDF5_PLUGIN_PATH environment variable

2020-09-05  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.5-alpha01: Relaxed Pigeon';git push
 	git tag -a 4.9.5-alpha01 -m 'Functionally identical to 4.9.4;';git push --tags

	* nco_sph.h clean up headers and file-scope variables

	* nco_rth_utl.h add prototype nco_zero_double()

	* nco_sph.h add prototypes for nco_sph_cross_chk(), nco_sph_seg_int_1(), Sin(), Cos()
